--- a/index.css
+++ b/index.css
@@ -38,6 +38,10 @@ a{
 h1{
     text-align: left;
     text-justify: inter-cluster;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    padding: 15px;
 }
 h5{
     font-size: 22px;
@@ -57,6 +61,8 @@ body{
     display: block;
     height: 300px;
     width: 250px;
+    background: #90ee90;
+    border-radius: 5px;
 }
 .divide{
     height: 30px;
@@ -64,14 +70,33 @@ body{
 .divide2{
     height: 30px;
 }
+a{
+    color: #6fd649;
+}
 
 .ul2 a{
     border-radius: 5px;
     width: 12px;
+    padding: 10px;
+
 }
 .ul2 a:hover{
-    background-color: blue;
+    background-color: #6fd649;
 }
 .sub{
     width: 170px;
+}
+span{
+    color: #6fd649;
+}
+
+.last{
+    background: #6fd649;
+    width: 100%;
+    height: 50px;
+}
+.lp{
+    color: white;
+    text-align: center;
+    font-size: 30px;
 }
