--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
 }
 section{
     width: auto;
-    height: 500px;
+    height: 550px;
     background:white;
     margin: 0px;
 
@@ -66,11 +66,12 @@ body{
 .formx{
     background-color: white;
     text-align: center;
-    display: block;
+    
     height: 300px;
     width: 250px;
     background: #90ee90;
     border-radius: 5px;
+    
     
 }
 .divide{
@@ -103,16 +104,12 @@ a{
 span{
     color: #6fd649;
 }
-
-.last{
-    background: #6fd649;
-    width: 100%;
-    height: 50px;
-    margin: 0%;
-    padding: 0%;
-}
-.lp{
+.pl{
+    background-color: #6fd649;
     color: white;
     text-align: center;
-    font-size: 30px;
+}
+
+
+    
 }
